fix: aside icon alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ height: calc(100% - 160px);
   width: 20px;
   height: 20px;
   margin-right: 5px;
-  margin-left: 8px;
+  margin-left: 5px;
   margin-bottom: 5px;
 }
 
